--- a/branding.html
+++ b/branding.html
@@ -1,240 +1,207 @@
 <!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>브랜딩 | 강반석 포트폴리오</title>
-  <meta name="description" content="브랜드 전략·아이덴티티·캠페인 자산을 한눈에 확인할 수 있는 브랜딩 시스템 페이지.">
-
-  <!-- 저장된 테마 즉시 적용 -->
-  <script>
-    (function(){try{
-      const saved = localStorage.getItem("bs-theme");
-      if(saved){ document.documentElement.setAttribute("data-theme", saved); }
-    }catch(e){}})();
-  </script>
-
-  <!-- 전역/브랜딩 CSS -->
-  <link rel="stylesheet" href="assets/css/main.css" />
-  <link rel="stylesheet" href="assets/css/branding.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>브랜딩 | BanSeok</title>
+  <meta name="description" content="데이터로 시장을 읽고, 인사이트로 전략을 설계하는 실행형 PM 강반석의 브랜딩. 금융 데이터 분석·마케팅 기반의 기획–디자인–개발 연결 능력.">
+  <link rel="stylesheet" href="assets/css/branding.css">
 </head>
-
-<body id="top" class="page page--branding">
-  <!-- 헤더(전역) -->
-  <header id="site-header" class="bs-header" role="banner">
-    <div class="bs-container">
-      <a href="index.html" class="bs-logo" aria-label="강반석 포트폴리오 홈">
-        <span class="logo-main">BanSeok</span>
-        <span class="logo-sub">Portfolio</span>
+<body class="theme--light">
+  <!-- ================= Header ================= -->
+  <header class="site-header" role="banner">
+    <div class="container nav-row">
+      <a href="index.html" class="logo" aria-label="홈으로">
+        <span>BanSeok</span> <b>Portfolio</b>
       </a>
-      <nav id="site-nav" class="bs-nav" role="navigation" aria-label="주요 메뉴">
-        <ul class="bs-nav__list">
-          <li><a class="bs-nav__link" href="index.html">홈</a></li>
-          <li><a class="bs-nav__link" href="projects.html">프로젝트</a></li>
-          <li><a class="bs-nav__link" href="data-insight.html">데이터 인사이트</a></li>
-          <li><a class="bs-nav__link is-active" href="branding.html">브랜딩</a></li>
-          <li><a class="bs-nav__link" href="reflection.html">성장 일지</a></li>
-          <li><a class="bs-nav__link" href="contact.html">연락처</a></li>
+      <nav class="nav" aria-label="주요 메뉴">
+        <ul>
+          <li><a href="index.html">홈</a></li>
+          <li><a href="projects.html">프로젝트</a></li>
+          <li><a href="data-insight.html">데이터 인사이트</a></li>
+          <li><a class="is-active" href="branding.html">브랜딩</a></li>
+          <li><a href="reflection.html">성장 일지</a></li>
+          <li><a href="contact.html">연락처</a></li>
         </ul>
       </nav>
+      <button id="themeToggle" class="theme-toggle" type="button" aria-label="테마 전환">🌙</button>
     </div>
   </header>
 
-  <!-- 테마 토글 -->
-  <button id="themeToggle" class="theme-toggle" type="button" aria-pressed="false" aria-label="테마 전환">
-    <span class="icon" aria-hidden="true">🌙</span>
-  </button>
+  <main id="main" class="site-main" role="main">
 
-  <main id="main" class="bs-main" role="main">
-    <!-- HERO -->
-    <section class="br-hero" aria-label="브랜딩 소개">
-      <div class="bs-container">
-        <h1 class="br-title">브랜딩 시스템</h1>
-        <p class="br-sub">전략 → 아이덴티티 → 실행까지, **일관성**으로 신뢰를 설계합니다.</p>
-      </div>
-    </section>
-
-    <!-- BRAND PILLARS -->
-    <section class="br-pillars" aria-label="브랜드 핵심 가치">
-      <div class="bs-container">
-        <ul class="br-pillar-list" role="list">
-          <li class="br-pillar">
-            <h3>데이터 기반</h3>
-            <p>정량·정성 인사이트를 결합해 의사결정의 정확도를 높입니다.</p>
-          </li>
-          <li class="br-pillar">
-            <h3>명료한 메시지</h3>
-            <p>최소한의 단어로 최대의 의미를 전달합니다.</p>
-          </li>
-          <li class="br-pillar">
-            <h3>일관된 경험</h3>
-            <p>채널·포맷을 넘어 동일한 톤 &amp; 무드를 유지합니다.</p>
-          </li>
-          <li class="br-pillar">
-            <h3>측정 가능한 성과</h3>
-            <p>브랜드 KPI를 설정하고 캠페인-성과를 연결합니다.</p>
-          </li>
+    <!-- =============== HERO =============== -->
+    <section class="hero">
+      <div class="hero-bg" aria-hidden="true"></div>
+      <div class="container hero-inner">
+        <h1 class="title">
+          데이터로 <span class="hl">시장을 읽고</span>,  
+          인사이트로 <span class="hl">전략을 설계</span>합니다.
+        </h1>
+        <p class="subtitle">
+          강반석은 <b>금융 데이터 분석과 디지털 마케팅</b>을 기반으로,  
+          <b>기획–디자인–개발</b>을 연결해 <b>실행까지 완성하는 프로젝트 매니저</b>입니다.
+        </p>
+        <ul class="tool-badges" aria-label="주요 도구">
+          <li>SQL</li><li>Python</li><li>HTML/CSS/JS</li><li>Figma</li><li>Photoshop</li><li>ChatGPT</li>
         </ul>
       </div>
     </section>
 
-    <!-- COLOR SYSTEM -->
-    <section class="br-colors" aria-label="컬러 시스템">
-      <div class="bs-container">
-        <header class="br-sec-head">
-          <h2>컬러 시스템</h2>
-          <p>라이트/다크 테마에서 대비·가독성을 검증했습니다.</p>
-        </header>
+    <!-- ============ BRAND FOCUS ============ -->
+    <section class="focus">
+      <div class="container">
+        <h2 class="sec-title">나의 브랜드 포커스</h2>
+        <div class="focus-grid">
+          <article class="card">
+            <h3>문제 정의(Define)</h3>
+            <p>데이터·고객 인터뷰·경쟁분석으로 <b>핵심 과제</b>를 명료화합니다.</p>
+          </article>
+          <article class="card">
+            <h3>가설 설계(Design)</h3>
+            <p>가설·지표·실험 설계로 <b>측정가능한 실험</b>을 준비합니다.</p>
+          </article>
+          <article class="card">
+            <h3>실행(Ship)</h3>
+            <p>디자인/콘텐츠/개발 커뮤니케이션을 <b>PM으로 오케스트레이션</b>합니다.</p>
+          </article>
+          <article class="card">
+            <h3>학습(Measure)</h3>
+            <p>GA4·SQL·Python으로 결과를 분석, <b>레버리지</b>를 도출합니다.</p>
+          </article>
+        </div>
+      </div>
+    </section>
 
-        <div class="br-color-grid">
-          <!-- 라이트 모의 카드 -->
-          <div class="br-color-card light">
-            <div class="swatch" style="--c: var(--bg)"></div>
-            <dl><dt>배경</dt><dd>var(--bg)</dd></dl>
-          </div>
-          <div class="br-color-card light">
-            <div class="swatch" style="--c: var(--fg)"></div>
-            <dl><dt>전경</dt><dd>var(--fg)</dd></dl>
-          </div>
-          <div class="br-color-card light">
-            <div class="swatch" style="--c: var(--accent)"></div>
-            <dl><dt>포인트</dt><dd>var(--accent)</dd></dl>
+    <!-- ============ GROWTH CHARTS ============ -->
+    <section class="growth" aria-labelledby="gTitle">
+      <div class="container">
+        <h2 id="gTitle" class="sec-title">도구 역량 & 성장 궤적</h2>
+        <p class="sec-desc">
+          단순 사용이 아니라 <b>업무 결과</b>를 만드는 도구 활용. 스크롤 시 <b>왼쪽에서 차오르는</b> 막대와 스파크라인이 그려집니다.
+        </p>
+
+        <div class="growth-grid">
+          <!-- 현재 숙련도(막대) -->
+          <div class="bars" id="bars"
+               data-items='[
+                 {"label":"SQL","value":78},
+                 {"label":"Python","value":74},
+                 {"label":"HTML/CSS/JS","value":82},
+                 {"label":"Figma","value":70},
+                 {"label":"Photoshop","value":68},
+                 {"label":"ChatGPT(프롬프트)","value":86}
+               ]'>
+            <!-- JS가 생성 -->
           </div>
 
-          <!-- 다크 미리보기 -->
-          <div class="br-color-card dark">
-            <div class="swatch" style="--c: #0E0E10"></div>
-            <dl><dt>Dark BG</dt><dd>#0E0E10</dd></dl>
-          </div>
-          <div class="br-color-card dark">
-            <div class="swatch" style="--c: #EAE6DC"></div>
-            <dl><dt>Dark FG</dt><dd>#EAE6DC</dd></dl>
-          </div>
-          <div class="br-color-card dark">
-            <div class="swatch" style="--c: #C8A25E"></div>
-            <dl><dt>Dark Accent</dt><dd>#C8A25E</dd></dl>
+          <!-- 최근 6개월 성장(라인) -->
+          <div class="lines">
+            <canvas id="sparkCanvas" width="600" height="300"
+              aria-label="최근 6개월 성장 추이"></canvas>
+            <script type="application/json" id="sparkData">
+              {
+                "labels": ["-5","-4","-3","-2","-1","현재"],
+                "series": [
+                  {"name":"SQL","points":[40,55,60,68,74,78]},
+                  {"name":"Python","points":[35,47,55,63,69,74]},
+                  {"name":"HTML/CSS/JS","points":[58,62,68,73,79,82]},
+                  {"name":"Figma","points":[30,46,55,61,66,70]},
+                  {"name":"Photoshop","points":[42,50,56,60,65,68]},
+                  {"name":"ChatGPT","points":[60,66,72,78,82,86]}
+                ]
+              }
+            </script>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- TYPO SCALE -->
-    <section class="br-type" aria-label="타이포그래피">
-      <div class="bs-container">
-        <header class="br-sec-head">
-          <h2>타이포 스케일</h2>
-          <p>정보 계층을 명확히 보여주는 제목/본문/캡션 체계.</p>
-        </header>
-        <div class="br-type-grid">
-          <div class="t t-display">Display — 40/48</div>
-          <div class="t t-h1">H1 — 32/40</div>
-          <div class="t t-h2">H2 — 24/32</div>
-          <div class="t t-h3">H3 — 20/28</div>
-          <div class="t t-body">Body — 16/24 : 구조는 단순하고 메시지는 일관되게.</div>
-          <div class="t t-caption">Caption — 13/18 : 주석/보조 설명</div>
+    <!-- ============ PROCESS TIMELINE (SVG) ============ -->
+    <section class="process" aria-labelledby="pTitle">
+      <div class="container">
+        <h2 id="pTitle" class="sec-title">프로젝트 프로세스</h2>
+
+        <div class="svg-wrap">
+          <svg viewBox="0 0 980 200" class="proc-svg" role="img"
+               aria-label="Discover → Define → Design → Build → Measure 루프">
+            <defs>
+              <marker id="arrow" markerWidth="10" markerHeight="10" refX="8" refY="5" orient="auto">
+                <path d="M0,0 L10,5 L0,10 Z" fill="currentColor"/>
+              </marker>
+              <linearGradient id="nodeGrad" x1="0" y1="0" x2="1" y2="1">
+                <stop offset="0%"  stop-color="var(--accent)"/>
+                <stop offset="100%" stop-color="color-mix(in srgb,var(--accent),white 20%)"/>
+              </linearGradient>
+            </defs>
+
+            <!-- 루프 경로(애니메이션 대상) -->
+            <path id="loop"
+                  d="M70,100 H230 H390 H550 H710
+                     C 820,100 820,40 720,40
+                     H260 C160,40 160,100 210,100"
+                  fill="none" stroke="currentColor" stroke-width="3"
+                  marker-end="url(#arrow)" class="loop-stroke" />
+
+            <!-- 노드 -->
+            <g class="node" transform="translate(70,100)">
+              <circle r="38" fill="url(#nodeGrad)"></circle>
+              <text dy="6" text-anchor="middle">Discover</text>
+            </g>
+            <g class="node" transform="translate(230,100)">
+              <circle r="38" class="node-bg"></circle>
+              <text dy="6" text-anchor="middle">Define</text>
+            </g>
+            <g class="node" transform="translate(390,100)">
+              <circle r="38" class="node-bg"></circle>
+              <text dy="6" text-anchor="middle">Design</text>
+            </g>
+            <g class="node" transform="translate(550,100)">
+              <circle r="38" class="node-bg"></circle>
+              <text dy="6" text-anchor="middle">Build</text>
+            </g>
+            <g class="node" transform="translate(710,100)">
+              <circle r="38" class="node-bg"></circle>
+              <text dy="6" text-anchor="middle">Measure</text>
+            </g>
+          </svg>
         </div>
+        <p class="proc-note">
+          각 스텝에서 <b>PM 커뮤니케이션 허브</b> 역할: 문제정의·가설·우선순위·리스크·의사결정 로그를 구조화합니다.
+        </p>
       </div>
     </section>
 
-    <!-- LOGO LOCKUPS -->
-    <section class="br-logos" aria-label="로고 락업">
-      <div class="bs-container">
-        <header class="br-sec-head">
-          <h2>로고 락업</h2>
-          <p>가로/세로/모노 버전과 최소 여백, 오용 예시 포함.</p>
-        </header>
-
-        <div class="br-logo-grid">
-          <!-- 실제 로고 이미지를 교체하세요 -->
-          <figure class="logo-card">
-            <div class="logo-mock">LOGO</div>
-            <figcaption>Primary (가로)</figcaption>
-          </figure>
-          <figure class="logo-card">
-            <div class="logo-mock vertical">LOGO</div>
-            <figcaption>Secondary (세로)</figcaption>
-          </figure>
-          <figure class="logo-card">
-            <div class="logo-mock mono">LOGO</div>
-            <figcaption>Monochrome</figcaption>
-          </figure>
-        </div>
+    <!-- ============ SCRIPT INTERVIEW (서사형) ============ -->
+    <section class="script">
+      <div class="container">
+        <h2 class="sec-title">한 줄 소개, 조금 더</h2>
+        <ol class="script-list" id="scriptList" aria-live="polite">
+          <li>숫자로 시작해, 스토리로 설계합니다.</li>
+          <li>데이터에서 ‘의미’를, 디자인에서 ‘이해’를, 실행에서 ‘속도’를 찾습니다.</li>
+          <li>SQL·Python으로 팩트를 모으고, Figma·웹으로 빠르게 가설을 검증합니다.</li>
+          <li>정확한 측정과 투명한 보고, 그리고 다음 액션까지가 제 업무 범위입니다.</li>
+        </ol>
       </div>
     </section>
 
-    <!-- CAMPAIGN HIGHLIGHTS -->
-    <section class="br-campaign" aria-label="캠페인 하이라이트">
-      <div class="bs-container">
-        <header class="br-sec-head">
-          <h2>캠페인</h2>
-          <p>성과 중심의 대표 사례를 시각적으로 요약합니다.</p>
-        </header>
-
-        <ul class="camp-grid" role="list">
-          <!-- 썸네일은 16:9 권장 -->
-          <li class="camp-card">
-            <a class="camp-media" href="#">
-              <img loading="lazy" src="assets/img/profile/profile-1.jpg" alt="캠페인 썸네일 1">
-            </a>
-            <div class="camp-body">
-              <h3>UGC 해시태그 캠페인</h3>
-              <p>참여 3만+, 브랜드 검색량 48%↑</p>
-            </div>
-          </li>
-          <li class="camp-card">
-            <a class="camp-media" href="#">
-              <img loading="lazy" src="assets/img/profile/profile-2.jpg" alt="캠페인 썸네일 2">
-            </a>
-            <div class="camp-body">
-              <h3>리브랜딩 론칭</h3>
-              <p>인지도 +26%p, 전환율 +9%p</p>
-            </div>
-          </li>
-          <li class="camp-card">
-            <a class="camp-media" href="#">
-              <img loading="lazy" src="assets/img/profile/profile-3.jpg" alt="캠페인 썸네일 3">
-            </a>
-            <div class="camp-body">
-              <h3>온·오프 통합 프로모션</h3>
-              <p>오프라인 유입률 +31%</p>
-            </div>
-          </li>
-        </ul>
+    <!-- ============ CTA ============ -->
+    <section class="cta">
+      <div class="container cta-inner">
+        <h2 class="cta-title">준비된 인재, 강반석입니다.</h2>
+        <p>데이터와 실행을 연결하며, 함께 성장할 기회를 만들어 갑니다.</p>
+        <a class="btn-accent" href="contact.html">강반석에게 연락하기</a>
       </div>
     </section>
 
-    <!-- GUIDELINES & DOWNLOAD -->
-    <section class="br-guides" aria-label="가이드라인 & 다운로드">
-      <div class="bs-container br-guides__inner">
-        <div class="br-checklist">
-          <h2>브랜드 가이드 체크리스트</h2>
-          <ul>
-            <li><input type="checkbox" id="g1"><label for="g1">최소 여백/최소 크기 준수</label></li>
-            <li><input type="checkbox" id="g2"><label for="g2">색상 대비(AA 이상) 검증</label></li>
-            <li><input type="checkbox" id="g3"><label for="g3">타이포 스케일 일관성</label></li>
-            <li><input type="checkbox" id="g4"><label for="g4">로고 오용 금지 사례 공유</label></li>
-            <li><input type="checkbox" id="g5"><label for="g5">에셋 버전 관리(파일명 규칙)</label></li>
-          </ul>
-        </div>
-
-        <aside class="br-downloads">
-          <h2>브랜드 에셋 다운로드</h2>
-          <a class="bs-btn bs-btn--accent" href="#" download>로고 패키지 (.zip)</a>
-          <a class="bs-btn bs-btn--ghost" href="#" download>가이드 PDF</a>
-        </aside>
-      </div>
-    </section>
   </main>
 
-  <footer id="site-footer" class="bs-footer" role="contentinfo">
-    <div class="bs-container">
-      <p class="bs-footer__brand">© <span id="year"></span> banseok. 통합은 힘입니다.</p>
-      <a class="bs-footer__top" href="#top" aria-label="맨 위로 이동">↑</a>
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <p>© <span id="year"></span> banseok · Insight × Execution</p>
     </div>
   </footer>
 
-  <!-- 전역/브랜딩 JS -->
-  <script src="assets/js/main.js" defer></script>
   <script src="assets/js/branding.js" defer></script>
 </body>
 </html>
