--- a/data-insight.html
+++ b/data-insight.html
@@ -1,176 +1,214 @@
 <!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>데이터 인사이트 | 강반석 포트폴리오</title>
-  <meta name="description" content="지표·트렌드·세그먼트 분석을 인터랙티브하게 탐색합니다.">
-
-  <!-- 저장된 테마 즉시 적용 -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>데이터 인사이트 | BanSeok Portfolio</title>
+  <meta name="description" content="데이터로 사고하고, 사고를 구조화합니다. BanSeok의 데이터 인사이트.">
+  <meta name="theme-color" content="#0f0f0f">
+  <!-- Chart.js (스케폴드) -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script> 
+  <!-- 전역 디자인 토큰/네비 스타일 -->
+  <link rel="stylesheet" href="assets/css/main.css">
+  <!-- 데이터 인사이트 전용 스타일 -->
+  <link rel="stylesheet" href="assets/css/data-insight.css">
   <script>
-    (function(){try{
-      const saved = localStorage.getItem("bs-theme");
-      if(saved){ document.documentElement.setAttribute("data-theme", saved); }
-    }catch(e){}})();
+    // FOUC 방지: 저장된 테마 즉시 적용
+    (function(){try{const t=localStorage.getItem('bs-theme');if(t)document.documentElement.setAttribute('data-theme',t);}catch(e){}})();
   </script>
-
-  <!-- 전역/페이지 CSS -->
-  <link rel="stylesheet" href="assets/css/main.css" />
-  <link rel="stylesheet" href="assets/css/data-insight.css" />
 </head>
-
-<body id="top" class="page page--insight">
-  <!-- 헤더(전역) -->
-  <header id="site-header" class="bs-header" role="banner" aria-label="상단 내비게이션">
+<body class="page page--insight" id="top">
+  <!-- ===== 헤더(인덱스/프로젝트와 동일) ===== -->
+  <header class="bs-header" role="banner">
     <div class="bs-container">
-      <a href="index.html" class="bs-logo" aria-label="강반석 포트폴리오 홈">
-        <span class="logo-main">BanSeok</span>
-        <span class="logo-sub">Portfolio</span>
+      <a href="index.html" class="bs-logo" aria-label="BanSeok Portfolio 홈">
+        <span class="logo-main">BanSeok</span><span class="logo-sub"> Portfolio</span>
       </a>
-      <nav id="site-nav" class="bs-nav" role="navigation" aria-label="주요 메뉴">
+      <nav class="bs-nav" aria-label="주요 메뉴">
         <ul class="bs-nav__list">
-          <li><a class="bs-nav__link" href="index.html">홈</a></li>
-          <li><a class="bs-nav__link" href="projects.html">프로젝트</a></li>
-          <li><a class="bs-nav__link is-active" href="data-insight.html">데이터 인사이트</a></li>
-          <li><a class="bs-nav__link" href="branding.html">브랜딩</a></li>
-          <li><a class="bs-nav__link" href="reflection.html">성장 일지</a></li>
-          <li><a class="bs-nav__link" href="contact.html">연락처</a></li>
+          <li><a href="index.html">홈</a></li>
+          <li><a href="projects.html">프로젝트</a></li>
+          <li><a class="is-active" href="data-insight.html">데이터 인사이트</a></li>
+          <li><a href="branding.html">브랜딩</a></li>
+          <li><a href="reflection.html">성장 일지</a></li>
+          <li><a href="contact.html">연락처</a></li>
         </ul>
       </nav>
+      <button id="themeToggle" class="theme-toggle" aria-pressed="false" aria-label="테마 전환">🌙</button>
     </div>
   </header>
 
-  <!-- 테마 토글(아이콘만) -->
-  <button id="themeToggle" class="theme-toggle" type="button" aria-pressed="false" aria-label="테마 전환">
-    <span class="icon" aria-hidden="true">🌙</span>
-  </button>
-
-  <main id="main" class="bs-main" role="main">
-    <!-- HERO -->
-    <section class="di-hero" aria-label="데이터 인사이트 소개">
+  <main class="bs-main" id="main" role="main">
+    <!-- ===== Hero ===== -->
+    <section class="insight-hero">
+      <div class="insight-hero__bg" aria-hidden="true"></div>
       <div class="bs-container">
-        <h1 class="di-title">데이터 인사이트</h1>
-        <p class="di-sub">주요 지표와 트렌드를 한눈에. 기간·세그먼트를 조절해 즉시 비교하세요.</p>
+        <h1>데이터 인사이트</h1>
+        <p class="lead">
+          데이터로 사고하고, 사고를 구조화합니다.<br>
+          결과보다 <strong>해석의 과정</strong>을 보여줍니다.
+        </p>
       </div>
     </section>
 
-    <!-- 컨트롤 바: 기간 / 세그먼트 / 검색 / 다운로드 -->
-    <section class="di-controls" aria-label="필터">
-      <div class="bs-container di-controls__inner">
-        <label class="di-field">
-          <span>시작</span>
-          <input id="diFrom" type="date" />
-        </label>
-        <label class="di-field">
-          <span>종료</span>
-          <input id="diTo" type="date" />
-        </label>
+    <!-- ===== 카테고리 필터칩 ===== -->
+   <section class="insight-grid">
+  <div class="bs-container insight-grid__inner">
+    <!-- 카드 1: 표 스타일 미리보기 -->
+    <article class="insight-card" data-cat="trend" data-id="i1" tabindex="0" aria-label="검색 트렌드 리포트 2025Q1 열기">
+      <div class="insight-preview is-table" aria-hidden="true">
+        <!-- 간단한 표 스켈레톤 (인라인 SVG) -->
+        <svg viewBox="0 0 400 180" preserveAspectRatio="none">
+          <rect x="0" y="0" width="400" height="180" rx="8" class="sv-bg"/>
+          <!-- header -->
+          <rect x="16" y="16" width="100" height="18" rx="4" class="sv-cell"/>
+          <rect x="128" y="16" width="90"  height="18" rx="4" class="sv-cell"/>
+          <rect x="230" y="16" width="70"  height="18" rx="4" class="sv-cell"/>
+          <rect x="310" y="16" width="74"  height="18" rx="4" class="sv-cell"/>
+          <!-- rows -->
+          <g class="row">
+            <rect x="16"  y="50" width="120" height="14" rx="3" class="sv-cell"/>
+            <rect x="150" y="50" width="60"  height="14" rx="3" class="sv-cell"/>
+            <rect x="220" y="50" width="50"  height="14" rx="3" class="sv-cell"/>
+            <rect x="280" y="50" width="90"  height="14" rx="3" class="sv-cell"/>
+          </g>
+          <g class="row">
+            <rect x="16"  y="76" width="120" height="14" rx="3" class="sv-cell"/>
+            <rect x="150" y="76" width="60"  height="14" rx="3" class="sv-cell"/>
+            <rect x="220" y="76" width="50"  height="14" rx="3" class="sv-cell"/>
+            <rect x="280" y="76" width="90"  height="14" rx="3" class="sv-cell"/>
+          </g>
+          <g class="row">
+            <rect x="16"  y="102" width="120" height="14" rx="3" class="sv-cell"/>
+            <rect x="150" y="102" width="60"  height="14" rx="3" class="sv-cell"/>
+            <rect x="220" y="102" width="50"  height="14" rx="3" class="sv-cell"/>
+            <rect x="280" y="102" width="90"  height="14" rx="3" class="sv-cell"/>
+          </g>
+        </svg>
+        <span class="preview-caption">표 미리보기</span>
+      </div>
+      <div class="insight-body">
+        <h3>검색 트렌드 리포트 2025Q1</h3>
+        <p>검색량·연관어 기반 사회 이슈/관심사 흐름</p>
+        <ul class="tags"><li>#트렌드</li><li>#검색데이터</li></ul>
+      </div>
+    </article>
 
-        <label class="di-field">
-          <span>세그먼트</span>
-          <select id="diSegment">
-            <option value="all">전체</option>
-            <option value="ios">iOS</option>
-            <option value="android">Android</option>
-            <option value="web">Web</option>
-          </select>
-        </label>
+    <!-- 카드 2: 막대 차트 스타일 미리보기 -->
+    <article class="insight-card" data-cat="marketing" data-id="i2" tabindex="0" aria-label="광고 효율 대시보드 열기">
+      <div class="insight-preview is-bars" aria-hidden="true">
+        <svg viewBox="0 0 400 180" preserveAspectRatio="none">
+          <rect x="0" y="0" width="400" height="180" rx="8" class="sv-bg"/>
+          <!-- bars -->
+          <rect x="60"  y="90" width="32" height="70" rx="4" class="sv-bar"/>
+          <rect x="130" y="60" width="32" height="100" rx="4" class="sv-bar"/>
+          <rect x="200" y="78" width="32" height="82" rx="4" class="sv-bar"/>
+          <rect x="270" y="110" width="32" height="50" rx="4" class="sv-bar"/>
+        </svg>
+        <span class="preview-caption">막대 차트</span>
+      </div>
+      <div class="insight-body">
+        <h3>광고 효율 대시보드</h3>
+        <p>채널별 CTR/전환율 비교, ROAS 개선 포인트</p>
+        <ul class="tags"><li>#마케팅</li><li>#성과분석</li></ul>
+      </div>
+    </article>
 
-        <label class="di-search">
-          <span class="di-search__icon" aria-hidden="true">🔎</span>
-          <input id="diQuery" type="search" placeholder="이벤트/메모 검색…" />
-        </label>
+    <!-- 카드 3: 라인 차트 스타일 미리보기 -->
+    <article class="insight-card" data-cat="user" data-id="i3" tabindex="0" aria-label="유저 리텐션 분석 열기">
+      <div class="insight-preview is-line" aria-hidden="true">
+        <svg viewBox="0 0 400 180" preserveAspectRatio="none">
+          <rect x="0" y="0" width="400" height="180" rx="8" class="sv-bg"/>
+          <!-- line path (간단한 꺾은선) -->
+          <polyline points="20,60 90,90 160,110 230,130 300,140 380,150" class="sv-line"/>
+          <polyline points="20,40 90,60 160,70 230,95 300,100 380,120" class="sv-line alt"/>
+        </svg>
+        <span class="preview-caption">라인 차트</span>
+      </div>
+      <div class="insight-body">
+        <h3>유저 리텐션 분석</h3>
+        <p>코호트 리텐션/재방문 전환 경로 시각화</p>
+        <ul class="tags"><li>#사용자행동</li><li>#리텐션</li></ul>
+      </div>
+    </article>
 
-        <div class="di-actions">
-          <button id="diReset" class="bs-btn bs-btn--ghost" type="button">초기화</button>
-          <button id="diDownload" class="bs-btn bs-btn--accent" type="button">CSV 다운로드</button>
+    <!-- 카드 4: 노트 스타일 미리보기 -->
+    <article class="insight-card" data-cat="experiment" data-id="i4" tabindex="0" aria-label="랜딩 A/B 테스트 열기">
+      <div class="insight-preview is-note" aria-hidden="true">
+        <div class="note-lines">
+          <span></span><span></span><span></span><span class="short"></span>
         </div>
+        <span class="preview-caption">노트</span>
       </div>
-    </section>
-
-    <!-- KPI 카드 -->
-    <section class="di-kpis" aria-label="핵심 지표">
-      <div class="bs-container di-kpis__grid">
-        <article class="kpi">
-          <h3>세션</h3>
-          <p class="kpi__value" id="kpiSessions">—</p>
-          <p class="kpi__delta" id="deltaSessions">—</p>
-        </article>
-        <article class="kpi">
-          <h3>전환율</h3>
-          <p class="kpi__value" id="kpiConv">—</p>
-          <p class="kpi__delta" id="deltaConv">—</p>
-        </article>
-        <article class="kpi">
-          <h3>매출</h3>
-          <p class="kpi__value" id="kpiRevenue">—</p>
-          <p class="kpi__delta" id="deltaRevenue">—</p>
-        </article>
-        <article class="kpi">
-          <h3>이탈률</h3>
-          <p class="kpi__value" id="kpiBounce">—</p>
-          <p class="kpi__delta" id="deltaBounce">—</p>
-        </article>
+      <div class="insight-body">
+        <h3>랜딩 A/B 테스트</h3>
+        <p>히어로 문구/CTA 대비 실험, 통계적 유의성 검정</p>
+        <ul class="tags"><li>#AB테스트</li><li>#가설검증</li></ul>
       </div>
-    </section>
+    </article>
 
-    <!-- 차트 3종 -->
-    <section class="di-charts" aria-label="차트">
-      <div class="bs-container di-charts__grid">
-        <!-- 트렌드(라인) -->
-        <article class="chart-card">
-          <header><h3>세션 트렌드</h3></header>
-          <canvas id="chartTrend" width="600" height="300" aria-label="세션 트렌드 차트"></canvas>
-        </article>
-
-        <!-- 카테고리(바) -->
-        <article class="chart-card">
-          <header><h3>채널별 세션</h3></header>
-          <canvas id="chartBar" width="600" height="300" aria-label="채널별 세션 막대차트"></canvas>
-        </article>
-
-        <!-- 구 성(도넛) -->
-        <article class="chart-card">
-          <header><h3>기기 비중</h3></header>
-          <canvas id="chartDonut" width="420" height="420" aria-label="기기 비중 도넛차트"></canvas>
-        </article>
+    <!-- 카드 5: (원한다면 다른 프리뷰 타입 재사용) -->
+    <article class="insight-card" data-cat="insight" data-id="i5" tabindex="0" aria-label="통찰 노트: 구매 장벽 열기">
+      <div class="insight-preview is-table" aria-hidden="true">
+        <svg viewBox="0 0 400 180" preserveAspectRatio="none">
+          <rect x="0" y="0" width="400" height="180" rx="8" class="sv-bg"/>
+          <rect x="16" y="20" width="140" height="16" rx="4" class="sv-cell"/>
+          <rect x="16" y="50" width="260" height="12" rx="4" class="sv-cell"/>
+          <rect x="16" y="70" width="220" height="12" rx="4" class="sv-cell"/>
+          <rect x="16" y="90" width="280" height="12" rx="4" class="sv-cell"/>
+        </svg>
+        <span class="preview-caption">표 미리보기</span>
       </div>
-    </section>
-
-    <!-- 데이터 테이블 -->
-    <section class="di-table" aria-label="원본 데이터">
-      <div class="bs-container">
-        <div class="table-wrap">
-          <table id="diTable">
-            <thead>
-              <tr>
-                <th>날짜</th>
-                <th>세그먼트</th>
-                <th>세션</th>
-                <th>전환수</th>
-                <th>전환율</th>
-                <th>매출(₩)</th>
-                <th>이탈률</th>
-                <th>메모</th>
-              </tr>
-            </thead>
-            <tbody><!-- JS 렌더 --></tbody>
-          </table>
-        </div>
+      <div class="insight-body">
+        <h3>통찰 노트: 구매 장벽</h3>
+        <p>퍼널 이탈구간 파악과 저비용 레버리지 제안</p>
+        <ul class="tags"><li>#인사이트</li><li>#레버리지</li></ul>
       </div>
-    </section>
+    </article>
+  </div>
+</section>  
   </main>
 
-  <!-- 푸터 -->
-  <footer id="site-footer" class="bs-footer" role="contentinfo">
+  <!-- ===== 상세 모달(시트) ===== -->
+  <div id="insightSheet" class="is-sheet" hidden aria-hidden="true">
+    <div class="is-sheet__backdrop" data-close></div>
+    <article class="is-sheet__panel" role="dialog" aria-modal="true" aria-labelledby="isTitle">
+      <button class="is-sheet__close" type="button" aria-label="닫기" data-close>×</button>
+
+      <!-- 좌: 시각화/이미지/차트 자리 -->
+      <div class="is-sheet__media">
+        <!-- 필요시 Chart.js 캔버스 교체 가능 -->
+        <img id="isImg" alt="">
+        <canvas id="isChart" aria-hidden="true" hidden></canvas>
+      </div>
+
+      <!-- 우: 텍스트 -->
+      <section class="is-sheet__body">
+        <header class="is-sheet__head">
+          <h2 id="isTitle"></h2>
+          <ul id="isTags" class="tags"></ul>
+        </header>
+
+        <p id="isDesc" class="is-desc"></p>
+        <ul id="isMeta" class="is-meta"></ul>
+
+        <div class="is-actions">
+          <a id="isLink" class="bs-btn bs-btn--accent" target="_blank" rel="noopener">리포트/대시보드 열기</a>
+        </div>
+      </section>
+    </article>
+  </div>
+
+  <footer class="bs-footer" role="contentinfo">
     <div class="bs-container">
-      <p class="bs-footer__brand">© <span id="year"></span> banseok. 통합은 힘입니다.</p>
-      <a class="bs-footer__top" href="#top" aria-label="맨 위로 이동">↑</a>
+      <p>© <span id="year"></span> banseok. 통합은 힘입니다.</p>
+      <a class="bs-footer__top" href="#top" aria-label="맨 위로">↑</a>
     </div>
   </footer>
 
-  <!-- 전역/페이지 JS -->
+  <!-- 전역 스크립트(테마 토글/공통 유틸) -->
   <script src="assets/js/main.js" defer></script>
+  <!-- 데이터 인사이트 전용 스크립트 -->
   <script src="assets/js/data-insight.js" defer></script>
 </body>
 </html>
